--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -26,9 +26,13 @@
     "dependencies": {
         "zod": "^4.0.8"
     },
+    "peerDependencies": {
+        "react": ">=18.2.0 || ^19"
+    },
     "devDependencies": {
         "@repo/typescript-config": "workspace:*",
         "@types/node": "^22.15.3",
+        "@types/react": "^19.1.1",
         "@vitest/coverage-v8": "^3.2.4",
         "tsx": "^4.19.4",
         "typescript": "^5.8.3",
