build: add --passWithNoTests flag to vitest scripts
- Add --passWithNoTests to all vitest run commands
- Ensure CI/CD passes for packages without tests
- Update both test and test:file scripts where applicable

--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -15,7 +15,7 @@
     },
     "scripts": {
         "generate-types": "tsx scripts/generate-types.ts",
-        "test": "vitest run",
+        "test": "vitest run --passWithNoTests",
         "test:watch": "vitest",
         "test:coverage": "vitest run --coverage",
         "lint": "biome check .",
