feat(i18n): update types and add accommodation field translations
- Update i18n types for better type safety
- Add Spanish translations for accommodation fields
- Add error message translations
- Support for new entity form field labels and descriptions

--- a/packages/i18n/src/locales/es/error.json
+++ b/packages/i18n/src/locales/es/error.json
@@ -4,5 +4,21 @@
         "heading": "La página que estás buscando no existe.",
         "description": "La página que estás buscando no existe.",
         "message": "La página que estás buscando no existe."
+    },
+    "form": {
+        "validation-failed": "La validación del formulario falló. Por favor, corrige los errores e intenta nuevamente.",
+        "save-failed": "Error al guardar",
+        "save-success": "Guardado exitoso",
+        "save-success-message": "Los cambios se guardaron correctamente",
+        "unexpected-error": "Ocurrió un error inesperado",
+        "validation-failed-fields": "La validación falló para {{count}} campo{{plural}}. Por favor, revisa los campos resaltados.",
+        "validation-failed-field": "La validación falló para 1 campo. Por favor, revisa el campo resaltado.",
+        "validation-failed-fields-plural": "La validación falló para {{count}} campos. Por favor, revisa los campos resaltados.",
+        "save-changes": "Guardar cambios",
+        "saving": "Guardando..."
+    },
+    "field": {
+        "required": "{{field}} es requerido",
+        "required-generic": "Este campo es requerido"
     }
 }
