feat(i18n): add entity select translations
- Add comprehensive Spanish translations for entity select component
- Include search placeholders, loading states, and error messages
- Add parametrized translations for dynamic content
- Generate updated TypeScript types (884 total keys)

--- a/packages/i18n/src/locales/es/ui.json
+++ b/packages/i18n/src/locales/es/ui.json
@@ -66,5 +66,24 @@
         "searchClear": "Limpiar búsqueda",
         "searching": "Buscando...",
         "columns": "Columnas"
+    },
+    "entitySelect": {
+        "clearSelection": "Limpiar selección",
+        "searching": "Buscando...",
+        "noResultsFound": "No se encontraron resultados",
+        "loading": "Cargando...",
+        "searchPlaceholder": "Buscar {entityType}...",
+        "selectItems": "Seleccionar elementos...",
+        "selectItem": "Seleccionar elemento...",
+        "selectedCount": "{count} seleccionados",
+        "errors": {
+            "loadingSelection": "Error al cargar selección",
+            "loadingOptions": "Error al cargar opciones",
+            "searchFailed": "Error en la búsqueda",
+            "failedToLoadSelected": "Error al cargar elementos seleccionados: {error}",
+            "failedToLoadOptions": "Error al cargar {entityType}: {error}",
+            "searchError": "La búsqueda falló: {error}",
+            "unknownError": "Error desconocido"
+        }
     }
 }
