feat(i18n): add navigation and progress translations
- Add Spanish translations for navigation components
- Add progress and completion status messages
- Update i18n types for new translation keys

Translations support the new intelligent navigation features.

--- a/packages/i18n/src/locales/es/ui.json
+++ b/packages/i18n/src/locales/es/ui.json
@@ -34,7 +34,14 @@
     },
     "navigation": {
         "navigation": "Navegación",
-        "home": "Inicio"
+        "home": "Inicio",
+        "formProgress": "Progreso del formulario",
+        "sectionsComplete": "secciones completas",
+        "errors": "errores",
+        "fieldsComplete": "campos completos",
+        "readyToSubmit": "Listo para enviar",
+        "incompleteForm": "Formulario incompleto",
+        "requiredFieldsMissing": "Faltan campos obligatorios"
     },
     "accessibility": {
         "logo": "Logo",
@@ -85,5 +92,8 @@
             "searchError": "La búsqueda falló: {error}",
             "unknownError": "Error desconocido"
         }
+    },
+    "breadcrumbs": {
+        "progress": "Progreso"
     }
 }
